--- a/server/package.json
+++ b/server/package.json
@@ -21,9 +21,10 @@
     "json-web-token": "^3.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.2",
-    "mongoose-sequence": "^6.0.1"
+    "mongoose-sequence": "^6.0.1",
+    "multer": "^2.0.0"
   },
   "engines": {
-    "node": "20.15.1" 
+    "node": "20.15.1"
   }
 }
